--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -18,7 +18,6 @@ jobs:
 
       - name: Install and build
         run: |
-          cd finshield-frontend
           npm install
           npm run build
 
@@ -28,5 +27,5 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "finshield-frontend"
+          app_location: "."
           output_location: "dist"
